// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Alert/> should render alert with type 1`] = `
<div
  class="happy-alert"
  style="background: red;"
>
  info
</div>
`;

exports[`<Alert/> should render alert with type 2`] = `
<div
  class="happy-alert"
  style="background: purple;"
>
  warning
</div>
`;

exports[`<Alert/> should render alert with type 3`] = `
<div
  class="happy-alert"
  style="background: green;"
>
  positive
</div>
`;

exports[`<Alert/> should render alert with type 4`] = `
<div
  class="happy-alert"
  style="background: blue;"
>
  negative
</div>
`;

exports[`<Alert/> should render default 1`] = `
<div>
  <div
    class="happy-alert"
    style="background: red;"
  >
    default
  </div>
</div>
`;
